--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,11 +12,7 @@ html {
 }
 
 body {
-  background: linear-gradient(
-    190deg,
-    rgb(41, 136, 232) 0%,
-    rgb(41, 136, 232) 0%
-  );
+  background-image: url(../assests/img/bg3.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -35,7 +31,8 @@ body {
   text-align: center;
   margin-bottom: 2rem;
   color: #e1ebfd;
-
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 44px;
   text-shadow: 0 0 5px #433aa8, 3px -1px 5px #271c6c;
 }
 
@@ -47,13 +44,12 @@ body {
 .todo-input {
   min-width: 15rem;
   width: 40vw;
-
   max-height: 2.5rem;
   background-color: #e1ebfd;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px #bab4e1b2;
   padding: 0.5rem 1rem;
-
   align-self: center;
 }
 .todo-input:focus {
@@ -63,7 +59,7 @@ body {
 
 .add-btn {
   margin-left: 1rem;
-  background-color: #271c6c;
+  background-color: #44b824;
   color: #e1ebfd;
   border-radius: 50%;
   border: 2px solid #e1ebfd;
@@ -72,7 +68,6 @@ body {
   height: 3.2rem;
   cursor: pointer;
   box-shadow: 2px 4px 10px #271c6c;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,7 +92,11 @@ body {
   padding: 0.5rem 1.2rem;
   border-radius: 20px;
   cursor: pointer;
+  color: #271c6c;
   border: none;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  box-shadow: 5px 5px 10px #bab4e1b2;
 }
 
 .displaytodos .buttons button:focus {
@@ -119,19 +118,18 @@ body {
 .card {
   display: flex;
   flex-direction: column;
-  background: rgb(180, 182, 218);
+  background: rgb(166, 169, 223);
   background: radial-gradient(
     circle,
     hsla(237, 34%, 78%, 0.9) 0%,
     hsla(219, 88%, 94%, 0.9) 100%
   );
-
+  box-shadow: 5px 5px 10px #bab4e1b2;
   margin: 0 1rem 1rem 0;
   height: 8rem;
   width: 18rem;
   border-radius: 0.5rem;
   padding: 1rem;
-
   position: relative;
 }
 
@@ -196,4 +194,9 @@ body {
   .card {
     margin-right: 0;
   }
+}
+
+.active-button {
+  background-color: #4caf50;
+  color: #fff;
 }
